--- a/roles/deploy_osh/templates/ingress-openstack.yaml.j2
+++ b/roles/deploy_osh/templates/ingress-openstack.yaml.j2
@@ -2,3 +2,27 @@ pod:
   replicas:
     ingress: 3
     error_page: 3
+  resources:
+    enabled: {{pod_resources}}
+    ingress:
+      requests:
+        memory: "128Mi"
+        cpu: "100m"
+      limits:
+        memory: "1024Mi"
+        cpu: "2000m"
+    error_pages:
+      requests:
+        memory: "128Mi"
+        cpu: "100m"
+      limits:
+        memory: "1024Mi"
+        cpu: "2000m"
+    jobs:
+      image_repo_sync:
+        requests:
+          memory: "128Mi"
+          cpu: "100m"
+        limits:
+          memory: "1024Mi"
+          cpu: "2000m"
