--- a/roles/deploy_osh/templates/prometheus-openstack-exporter.yaml.j2
+++ b/roles/deploy_osh/templates/prometheus-openstack-exporter.yaml.j2
@@ -1,6 +1,6 @@
 pod:
   replicas:
-    prometheus: 2
+    prometheus_openstack_exporter: 1
   lifecycle:
     upgrades:
       revision_history: 3
@@ -9,17 +9,17 @@ pod:
         max_unavailable: 1
         max_surge: 3
     termination_grace_period:
-      prometheus:
+      prometheus_openstack_exporter:
         timeout: 30
   resources:
     enabled: {{pod_resources}}
-    prometheus:
+    prometheus_openstack_exporter:
+      requests:
+        memory: "128Mi"
+        cpu: "100m"
       limits:
         memory: "1024Mi"
         cpu: "2000m"
-      requests:
-        memory: "128Mi"
-        cpu: "500m"
     jobs:
       image_repo_sync:
         requests:
@@ -28,13 +28,23 @@ pod:
         limits:
           memory: "1024Mi"
           cpu: "2000m"
-      tests:
+      ks_user:
         requests:
           memory: "128Mi"
           cpu: "100m"
         limits:
           memory: "1024Mi"
           cpu: "2000m"
-storage:
-  requests:
-    storage: {{infra.prometheus.storage}}
+conf:
+  prometheus_openstack_exporter:
+    OS_POLLING_INTERVAL: 30
+    TIMEOUT_SECONDS: 20
+    OS_RETRIES: 1
+
+manifests:
+  job_ks_user: false
+dependencies:
+  static:
+    prometheus_openstack_exporter:
+      jobs: null
+      services: null
