--- a/roles/deploy_osh/templates/mariadb.yaml.j2
+++ b/roles/deploy_osh/templates/mariadb.yaml.j2
@@ -59,7 +59,7 @@ pod:
           memory: "1024Mi"
           cpu: "2000m"
 volume:
-  size: {{infra.mariadb.storage}}
+  size: {{mariadb.storage}}
 
 monitoring:
   prometheus:
