--- a/roles/deploy_osh/templates/rabbitmq.yaml.j2
+++ b/roles/deploy_osh/templates/rabbitmq.yaml.j2
@@ -22,7 +22,7 @@ endpoints:
     auth:
       erlang_cookie: {{rabbitmq_osh_cookie}}
 volume:
-  size: {{infra.rabbitmq.storage}}
+  size: {{rabbitmq.storage}}
 
 conf:
   enabled_plugins:
