--- a/roles/deploy_osh/templates/radosgw-osh-infra.yaml.j2
+++ b/roles/deploy_osh/templates/radosgw-osh-infra.yaml.j2
@@ -12,7 +12,7 @@ deployment:
   rbd_provisioner: false
   cephfs_provisioner: false
   client_secrets: false
-  rgw_keystone_user_and_endpoints: true
+  rgw_keystone_user_and_endpoints: false
 bootstrap:
   enabled: false
 conf:
