--- a/roles/deploy_osh/templates/helm_vars_common.yaml.j2
+++ b/roles/deploy_osh/templates/helm_vars_common.yaml.j2
@@ -63,22 +63,22 @@ endpoints:
 {% endif %}
 {% for param, value in params.iteritems() %}
 {% if param == 'password' %}
-        password: {{lookup('vars', endpoint+'_'+user+'_pwd')}}
+        password: "{{lookup('vars', endpoint+'_'+user+'_pwd')}}"
 {% continue %}
 {% endif %}
 {% if param == 'access_key' %}
-        access_key: {{lookup('vars', endpoint+'_'+user+'_'+param+'_pwd')}}
+        access_key: "{{lookup('vars', endpoint+'_'+user+'_'+param+'_pwd')}}"
 {% continue %}
 {% endif %}
 {% if param == 'secret_key' %}
-        secret_key: {{lookup('vars', endpoint+'_'+user+'_'+param+'_pwd')}}
+        secret_key: "{{lookup('vars', endpoint+'_'+user+'_'+param+'_pwd')}}"
 {% continue %}
 {% endif %}
 {% if endpoint == 'identity' and user == 'heat' and param == 'role' %}
         {{param}}: [{{value|join(', ')}}]
 {% continue %}
 {% endif %}
-        {{param}}: {{value}}
+        {{param}}: "{{value}}"
 {% endfor %}
 {% endfor %}
 {% endfor %}
