Fix absent metric, fix wrong alerts, dashbords

--- a/roles/deploy_osh/templates/helm_vars_common.yaml.j2
+++ b/roles/deploy_osh/templates/helm_vars_common.yaml.j2
@@ -18,6 +18,8 @@ images:
 {% endfor %}
 
 
+release_group: {{region}}_{{os_release}}
+
 # Parameter for ceph network
 network:
   public: {{ceph_net}}
