--- a/roles/deploy_osh/templates/prometheus-kube-state-metrics.yaml.j2
+++ b/roles/deploy_osh/templates/prometheus-kube-state-metrics.yaml.j2
@@ -28,3 +28,27 @@ pod:
         limits:
           memory: "1024Mi"
           cpu: "2000m"
+
+# For kubespray integration
+scheduler_labels:
+  k8s-app: kube-scheduler
+controller_labels:
+  k8s-app: kube-controller-manager
+endpoints:
+  calico_exporter:
+    hosts:
+      default: calico-exporter
+    port:
+      metrics:
+        default: 9091
+monitoring:
+  prometheus:
+    enabled: {{monitoring}}
+    calico_exporter:
+      scrape: true
+      port: 9091
+manifests:
+  monitoring:
+    prometheus:
+      service_exporter: true
+
