--- a/roles/maas/templates/start.sh.j2
+++ b/roles/maas/templates/start.sh.j2
@@ -21,6 +21,7 @@ env > /tmp/env
 
 chown maas:maas ~maas/
 chown maas:maas /etc/maas
+chown maas:maas /var/lib/maas/boot-resources
 
 # MAAS must be able to ssh to libvirt hypervisors
 # to control VMs
