--- a/roles/deploy_osh/templates/ceph-mon.yaml.j2
+++ b/roles/deploy_osh/templates/ceph-mon.yaml.j2
@@ -9,7 +9,7 @@
 {%- endif %}
 {%- endfor %}
 {%- endif %}
-{%- set disks = hostvars[host]['ansible_local']['osd_disks'] %}
+{%- set disks = hostvars[host]['osd_disks'] %}
 {%- for disk in disks %}
 {%- do osd_pairs.append(disk+"-"+host_osd_jour+"-"+class.area) %}
 {%- endfor %}
