Fix maas rack script

--- a/roles/deploy_osh/templates/prometheus-node-exporter.yaml.j2
+++ b/roles/deploy_osh/templates/prometheus-node-exporter.yaml.j2
@@ -36,7 +36,7 @@ pod:
       enabled: true
 
 conf:
-  ntp_server_ip: {{ntp_srv| default('127.0.0.1')}}
+  ntp_server_ip: '127.0.0.1'
   collectors:
     enable:
       - ntp
