--- a/roles/deploy_osh/templates/prometheus.yaml.j2
+++ b/roles/deploy_osh/templates/prometheus.yaml.j2
@@ -296,7 +296,7 @@ conf:
         - name: basic_linux.rules
           rules:
           - alert: node_filesystem_full_80percent
-            expr: sort(node_filesystem_free{device!~"ramfs|tmpfs|debugfs|cgroup|cgroup2|configfs|fusectl|proc|pstore|securityfs"} < node_filesystem_size{device!~"ramfs|tmpfs|debugfs|cgroup|cgroup2|configfs|fusectl|proc|pstore|securityfs"}
+            expr: sort(node_filesystem_free{device!~"ramfs|tmpfs|debugfs|cgroup|cgroup2|configfs|fusectl|proc|pstore|securityfs|binfmt_misc"} < node_filesystem_size{device!~"ramfs|tmpfs|debugfs|cgroup|cgroup2|configfs|fusectl|proc|pstore|securityfs"}
               * 0.2) / 1024 ^ 3
             for: 5m
             labels:
@@ -306,7 +306,7 @@ conf:
                 got less than 10% space left on its filesystem.'
               summary: '{{$labels.alias}}: Filesystem is running out of space soon.'
           - alert: node_filesystem_full_in_4h
-            expr: predict_linear(node_filesystem_free{device!~"ramfs|tmpfs|debugfs|cgroup|cgroup2|configfs|fusectl|proc|pstore|securityfs"}[1h], 4 * 3600) <= 0
+            expr: predict_linear(node_filesystem_free{device!~"ramfs|tmpfs|debugfs|cgroup|cgroup2|configfs|fusectl|proc|pstore|securityfs|binfmt_misc"}[1h], 4 * 3600) <= 0
             for: 5m
             labels:
               severity: page
